# maze

./: .gitignore  Cargo.toml  flake.nix
src/: app.rs  lib.rs  main.rs
src/app/: input.rs  mod.rs  modes.rs  state.rs
src/audio/: engine.rs  graph.rs  mod.rs  nodes.rs  synth.rs
src/modules/: effects.rs  filter.rs  mod.rs  oscillator.rs  output.rs  sequencer.rs  types.rs
src/ui/: connections_view.rs  layout.rs  mod.rs  modules_view.rs  parameters_view.rs  terminal.rs  widgets.rs
src/utils/: config.rs  math.rs  mod.rs
