[package]
name = "maze-daw"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI
crossterm = "0.28"
ratatui = "0.28"

# Audio Core
cpal = "0.15"
fundsp = "0.18"
rodio = "0.19"

# MIDI (optional for now - comment out if causing issues)
# midi_fundsp = "0.7"
# midir = "0.9"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
anyhow = "1.0"

# Math/DSP helpers (optional - comment out if not needed immediately)
# num-traits = "0.2"
# num-complex = "0.4"

# Threading for audio
crossbeam = "0.8"
parking_lot = "0.12"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration directories
dirs = "5.0"

# For fundsp types
typenum = "1.17"

# Random number generation (for sequencer)
rand = "0.8"
